--- a/index.html
+++ b/index.html
@@ -58,6 +58,60 @@
       </nav>
     </header>
 
+    <main>
+      <section id="me">
+        <div class="container" id="c2">
+          <div class="row">
+            <div class="col-1"></div>
+            <div class="col-11"><h1 id="#id1">O mě</h1></div>
+          </div>
+        </div>
+        <div class="container" id="c1">
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <h1><b>Michal Kraninger</b></h1>
+              <div class="subheading"><i>Junior software developer</i></div>
+              <img
+                id="im1"
+                src="./images/foto.jpg"
+                alt="Michal Kraninger"
+                class="d-none d-md-block mx-auto rounded-circle mt-5 w-100"
+              />
+            </div>
+            <div class="col-12 col-md-8">
+              <p style="color: #94a3b8">
+                Od dětství mě zajímají moderní technologie a nepřestává mě
+                fascinovat, jak fungují. Postupně jsem se zajímal o různé
+                technologie objevil jsem kouzlo kódu. Proto aktuálně studuji
+                rekvalifikační kurz Objektově orientované programování na
+                VŠB-TUO. Naučit se dobře programovat je výzva, která mě velmi
+                baví.
+              </p>
+              <p>
+                Ve svém volném čase rekreačně sportuji, rád poznávám cizí země a
+                kultury. Čtu zajímavé knihy ať v českém anebo anglickém jazyce a
+                sleduji filmy.
+              </p>
+              <p>
+                Na Vysoké škole báňské jsem vystudoval obor požární ochrana a
+                průmyslová bezpečnost a 15 let jsem se profesně věnoval oblasti
+                bezpečnosti práce.
+              </p>
+              <p>
+                V dnešní době máme k dispozici neuvěřitelný hardware, který nám
+                umožňuje žít ve světě, kde i malé zařízení v kapse dokáže ihned
+                poskytnout potřebné informace nebo uchovat vzácné okamžiky.
+                Nicméně, samotný hardware nestačí. Je potřeba také správně
+                napsaný kód, a to je i mým cílem. Chci vytvářet funkční a
+                efektivní kód, který nejen využívá technologický potenciál, ale
+                také přináší skutečnou hodnotu pro uživatele.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script src="./bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
