--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container" id="c2">
           <div class="row">
             <div class="col-1"></div>
-            <div class="col-11"><h1 id="#id1">O mě</h1></div>
+            <div class="col-11"><h1 id="n1"><b>O mě<b></h1></div>
           </div>
         </div>
         <div class="container" id="c1">
