--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
      <section id="skills">
 
-      <div class="container" id="c3">
+      <div class="container">
         <div class="row">
           <div class="col-12">
             <p><b>Front-End</b></p>
@@ -206,14 +206,15 @@
         </div>
       </div>
 
-      <div class="container" id="c4">
-        <div
-          class="row"
-          style="text-align: center; border-bottom: 1px solid white"
-        >
-          <p><b>Programovací jazyky</b></p>
-        </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p><b>Programovací jazyky</b></p>
+          </div>
+        </div>      
+      </div>
 
+      <div class="container" id="c4">
         <div class="row">
           <div class="icons2">
             <svg
@@ -298,14 +299,15 @@
         </div>
       </div>
 
-      <div class="container" id="c5">
-        <div
-          class="row"
-          style="text-align: center; border-bottom: 1px solid white"
-        >
-          <p><b>Databáze</b></p>
-        </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p><b>Databáze</b></p>
+          </div>
+        </div>      
+      </div>
 
+      <div class="container" id="c5">
         <div class="row">
           <div class="icons3">
             <svg
@@ -417,14 +419,15 @@
         </div>
       </div>
 
-      <div class="container" id="c6">
-        <div
-          class="row"
-          style="text-align: center; border-bottom: 1px solid white"
-        >
-          <p><b>Ostatní</b></p>
-        </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p><b>Ostatní</b></p>
+          </div>
+        </div>      
+      </div>
 
+      <div class="container" id="c6">
         <div class="row">
           <div class="icons3">
             <svg
