--- a/index.html
+++ b/index.html
@@ -115,20 +115,19 @@
 
       <!-- Skills -->
 
-     <!-- Skills -->
 
      <section id="skills">
 
       <div class="container">
-        <div class="row">
-          <div class="col-12">
+        <div class="row" style="margin-bottom: 1rem;">
+          <div class="col-12" style="text-align: center; border-bottom: 1px solid white">
             <p><b>Front-End</b></p>
           </div>
         </div>      
       </div>
 
       <div class="container" id="c3">
-        <div class="row">
+        <div class="row" style="margin-bottom: 2rem;">
           <div class="col-12">
             <!-- <img src="./images/HTML5_logo.svg" alt="HTML5" width="50px" style="color: black;"> -->
             <svg
@@ -207,15 +206,15 @@
       </div>
 
       <div class="container">
-        <div class="row">
-          <div class="col-12">
+        <div class="row" style="margin-bottom: 1rem;">
+          <div class="col-12" style="text-align: center; border-bottom: 1px solid white">
             <p><b>Programovací jazyky</b></p>
           </div>
         </div>      
       </div>
 
       <div class="container" id="c4">
-        <div class="row">
+        <div class="row" style="margin-bottom: 2rem;">
           <div class="icons2">
             <svg
               fill="white"
@@ -300,15 +299,15 @@
       </div>
 
       <div class="container">
-        <div class="row">
-          <div class="col-12">
+        <div class="row" style="margin-bottom: 1rem;">
+          <div class="col-12" style="text-align: center; border-bottom: 1px solid white">
             <p><b>Databáze</b></p>
           </div>
         </div>      
       </div>
 
       <div class="container" id="c5">
-        <div class="row">
+        <div class="row" style="margin-bottom: 2rem;">
           <div class="icons3">
             <svg
               fill="white"
@@ -420,15 +419,15 @@
       </div>
 
       <div class="container">
-        <div class="row">
-          <div class="col-12">
+        <div class="row" style="margin-bottom: 1rem;">
+          <div class="col-12" style="text-align: center; border-bottom: 1px solid white">
             <p><b>Ostatní</b></p>
           </div>
         </div>      
       </div>
 
       <div class="container" id="c6">
-        <div class="row">
+        <div class="row" style="margin-bottom: 2rem;">
           <div class="icons3">
             <svg
               viewBox="0 0 20 20"
