--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
 
      <section id="skills">
 
+
+      <div class="container">
+        <div class="row" style="margin-bottom: 1rem;">
+          <div class="col-12">
+            <h1 id="n2">Skills</h1>
+          </div>
+        </div>      
+      </div>
+
       <div class="container">
         <div class="row" style="margin-bottom: 1rem;">
           <div class="col-12" style="text-align: center; border-bottom: 1px solid white">
