--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     </header>
 
     <main>
+
+      <!-- About me -->
+
       <section id="me">
         <div class="container" id="c2">
           <div class="row">
@@ -115,14 +118,11 @@
 
       <!-- Skills -->
 
-
      <section id="skills">
-
-
       <div class="container">
         <div class="row" style="margin-bottom: 1rem;">
           <div class="col-12">
-            <h1 id="n2">Skills</h1>
+            <h1 id="n2">Dovednosti</h1>
           </div>
         </div>      
       </div>
@@ -584,6 +584,128 @@
         </div>
       </div>
     </section>
+
+    <!--  Projects -->
+
+    <section id="projects">
+
+      <div class="container" id="c9">
+        <div class="row">        
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <h1 id="n3">Projekty</h1>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            
+          </div>
+        </div>
+
+      <div class="container" id="c7">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images/School.jpg" class="card-img-top" alt="Škola">
+              <div class="card-body">
+                <h5 class="card-title"><b>Škola | C#</b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                    Školní projekt, který se věnuje implementaci technologie
+                    ASP.net. Aplikace zahrnuje funkce: evidence studentů,
+                    evidence předmětů, evidence známek Funkce vkládání, úpravy a
+                    výmazu. Přístupová práva pro ruzné uživatele.
+                  </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#" class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images/School2.jpg" class="card-img-top" alt="Škola">
+              <div class="card-body">
+                <h5 class="card-title"><b>Škola | Java, Spring</b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                  Aplikace pro účely školy, evidence žáků, předmětů, známek.
+                </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#" class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images/Firma.png" class="card-img-top" alt="Firma">
+              <div class="card-body">
+                <h5 class="card-title"><b>Firemní webová stránka | HTML, CSS, Bootstrap </b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                  Cvičný úkol - tvorba firemní webové stránky v jazycích HTML,
+                  CSS, Boostrap.
+                </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#" class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images//Weather.jpg" class="card-img-top" alt="Počasí">
+              <div class="card-body">
+                <h5 class="card-title"><b>Počasí | Java, Spring </b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                  Implementace API na počasí v Javě. Jedná s o školní projekt.
+                </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#" class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container" id="c8">
+        <div class="row">
+          
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images/Weather2.jpg" class="card-img-top" alt="Firma">
+              <div class="card-body">
+                <h5 class="card-title"><b>Počasí | C# </b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                  Implementace API na počasí v ASP.NET. Jedná s o školní
+                  projekt.
+                </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#"class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 my-1">
+            <div class="card w-100">
+              <img src="./images/Calendar.jpg" class="card-img-top" alt="Počasí">
+              <div class="card-body">
+                <h5 class="card-title"><b> Organizer | C# </b></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">
+                  Jedná se o cvičný projekt v jazyce C#, ASP.NET. Slouží k
+                    vedení evidence narozenin, dárků a orgnizace oslav.
+                </p>
+                <a href="#" class="btn btn-lg btn-outline-primary">GitHub</a>
+                <a href="#" class="btn btn-lg btn-outline-primary">&nbsp Visit &nbsp&nbsp</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+
+
   </main>
 
     </main>
